crates/facet_generate/src/reflection/snapshots/facet_generate__reflection__opaque_proxy_combinations__enum_tuple_variant_two_fields_only_opaque_without_proxy.snap
---
source: crates/facet_generate/src/reflection/opaque_proxy_combinations.rs
expression: reflect!(Event).unwrap()
---
? namespace: ROOT
  name: Event
: ENUM:
    - 0:
        Hidden:
          - TUPLE:
              - STR
          - []
    - EXTERNAL
    - []
