crates/facet_generate/src/reflection/snapshots/facet_generate__reflection__opaque_proxy_combinations__enum_tuple_variant_two_opaque_proxy_fields.snap
---
source: crates/facet_generate/src/reflection/opaque_proxy_combinations.rs
expression: "reflect!(Event, UserId, OrgId).unwrap()"
---
? namespace: ROOT
  name: Event
: ENUM:
    - 0:
        Pair:
          - TUPLE:
              - TYPENAME:
                  namespace: ROOT
                  name: UserId
              - TYPENAME:
                  namespace: ROOT
                  name: OrgId
          - []
    - EXTERNAL
    - []
? namespace: ROOT
  name: OrgId
: NEWTYPESTRUCT:
    - STR
    - - Second proxy type for multi-field tests.
? namespace: ROOT
  name: UserId
: NEWTYPESTRUCT:
    - STR
    - - "Domain ID with `Facet`. Wire anchor for typegen."
