crates/facet_generate/src/reflection/snapshots/facet_generate__reflection__opaque_proxy_combinations__enum_tuple_variant_unit_and_opaque_proxy.snap
---
source: crates/facet_generate/src/reflection/opaque_proxy_combinations.rs
expression: "reflect!(Event, UserId).unwrap()"
---
? namespace: ROOT
  name: Event
: ENUM:
    - 0:
        Mixed:
          - TUPLE:
              - UNIT
              - TYPENAME:
                  namespace: ROOT
                  name: UserId
              - U32
          - []
    - EXTERNAL
    - []
? namespace: ROOT
  name: UserId
: NEWTYPESTRUCT:
    - STR
    - - "Domain ID with `Facet`. Wire anchor for typegen."
