crates/facet_generate/src/reflection/snapshots/facet_generate__reflection__opaque_proxy_combinations__enum_tuple_variant_vec_opaque_proxy.snap
---
source: crates/facet_generate/src/reflection/opaque_proxy_combinations.rs
expression: "reflect!(Event, UserId, UserIdList).unwrap()"
---
? namespace: ROOT
  name: Event
: ENUM:
    - 0:
        Users:
          - NEWTYPE:
              TYPENAME:
                namespace: ROOT
                name: UserIdList
          - []
    - EXTERNAL
    - []
? namespace: ROOT
  name: UserId
: NEWTYPESTRUCT:
    - STR
    - - "Domain ID with `Facet`. Wire anchor for typegen."
? namespace: ROOT
  name: UserIdList
: NEWTYPESTRUCT:
    - SEQ:
        TYPENAME:
          namespace: ROOT
          name: UserId
    - - Proxy for list opaque lattice IDs.
