crates/facet_generate/src/reflection/snapshots/facet_generate__reflection__opaque_proxy_combinations__enum_tuple_variant_with_unit_field.snap
---
source: crates/facet_generate/src/reflection/opaque_proxy_combinations.rs
expression: reflect!(Event).unwrap()
---
? namespace: ROOT
  name: Event
: ENUM:
    - 0:
        Mixed:
          - TUPLE:
              - U32
              - UNIT
          - []
    - EXTERNAL
    - []
