crates/facet_generate/src/reflection/snapshots/facet_generate__reflection__opaque_proxy_combinations__enum_type_rename_with_opaque_proxy_variants.snap
---
source: crates/facet_generate/src/reflection/opaque_proxy_combinations.rs
expression: "reflect!(Event, UserId).unwrap()"
---
? namespace: ROOT
  name: UserId
: NEWTYPESTRUCT:
    - STR
    - - "Domain ID with `Facet`. Wire anchor for typegen."
? namespace: ROOT
  name: WireEvent
: ENUM:
    - 0:
        User:
          - NEWTYPE:
              TYPENAME:
                namespace: ROOT
                name: UserId
          - []
      1:
        SignIn:
          - STRUCT:
              - user_id:
                  - TYPENAME:
                      namespace: ROOT
                      name: UserId
                  - []
          - []
      2:
        Pair:
          - TUPLE:
              - U32
              - TYPENAME:
                  namespace: ROOT
                  name: UserId
          - []
    - EXTERNAL
    - []
