crates/facet_generate/src/reflection/snapshots/facet_generate__reflection__opaque_proxy_combinations__enum_variant_holding_enum_with_opaque_proxy.snap
---
source: crates/facet_generate/src/reflection/opaque_proxy_combinations.rs
expression: "reflect!(OuterEvent, UserId).unwrap()"
---
? namespace: ROOT
  name: InnerEvent
: ENUM:
    - 0:
        User:
          - NEWTYPE:
              TYPENAME:
                namespace: ROOT
                name: UserId
          - []
    - EXTERNAL
    - []
? namespace: ROOT
  name: OuterEvent
: ENUM:
    - 0:
        Wrapped:
          - NEWTYPE:
              TYPENAME:
                namespace: ROOT
                name: InnerEvent
          - []
    - EXTERNAL
    - []
? namespace: ROOT
  name: UserId
: NEWTYPESTRUCT:
    - STR
    - - "Domain ID with `Facet`. Wire anchor for typegen."
