crates/facet_generate/src/reflection/snapshots/facet_generate__reflection__opaque_proxy_combinations__namespace_cleared_on_proxy_type.snap
---
source: crates/facet_generate/src/reflection/opaque_proxy_combinations.rs
expression: "reflect!(Holder, RootUserId).unwrap()"
---
? namespace: ROOT
  name: Holder
: STRUCT:
    - - user_id:
          - TYPENAME:
              namespace: ROOT
              name: RootUserId
          - []
    - []
? namespace: ROOT
  name: RootUserId
: NEWTYPESTRUCT:
    - STR
    - []
